Strong soap testing

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "knex": "^0.13.0",
-    "soap": "^0.11.4",
-    "request": "^2.88.0"
+    "knex": "^0.16.3",
+    "request": "^2.88.0",
+    "soap": "^0.25.0",
+    "strong-soap": "^1.15.0"
   },
   "keywords": []
 }
